--- a/index.html
+++ b/index.html
@@ -8,11 +8,24 @@
     <h2>1st gen</h2>
     <ol>
       <li>
-        <a href="http://ci.thesongs.org">ci.thesongs.org</a>
+        <a href="http://ci.thesongs.org">ci.thesongs.org <b>admin</b> </a>
       </li>
       <li>
         <a href="http://yu.thesongs.org">yu.thesongs.org</a>
       </li>
     </ol>
   </body>
+  <foot>
+    <h3>What to apply:</h3>
+    <ol>
+      <li>a mail address like <i>name</i>@thesongs.org </li>
+      <li>a subdomain name like <i>name</i>.thesongs.org </li>
+    </ol>
+    <h3>How to apply:</h3>
+    <ol>
+      <li>send email to <b> <i>ci{at}thesongs{dot}org</i> </b> for an email address providing your infomation</li>
+      <li>with the apply email, send your A or CNAME info to the admin</li>
+      <li>Or you can chat privately with the admin for email address and subdomain</li>
+    </ol>
+  </foot>
 </html>
