--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </li>
     </ol>
   </body>
-  <foot>
+  <footer>
     <h3>What to apply:</h3>
     <ol>
       <li>a mail address like <i>name</i>@thesongs.org </li>
@@ -27,5 +27,5 @@
       <li>with the apply email, send your A or CNAME info to the admin</li>
       <li>Or you can chat privately with the admin for email address and subdomain</li>
     </ol>
-  </foot>
+  </footer>
 </html>
