--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </ol>
     <h3>How to apply:</h3>
     <ol>
-      <li>send email to <b> <i>ci{at}thesongs{dot}org</i> </b> for an email address providing your infomation</li>
-      <li>with the apply email, send your A or CNAME info to the admin</li>
+      <li>send email to <b> <i>ci{at}thesongs{dot}org</i> </b> for an email address providing your information</li>
+      <li>with the applied email, send your A or CNAME info to the admin</li>
       <li>Or you can chat privately with the admin for email address and subdomain</li>
     </ol>
   </footer>
