--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="http://ci.thesongs.org">ci.thesongs.org <b>admin</b> </a>
       </li>
       <li>
-        <a href="http://yu.thesongs.org">yu.thesongs.org</a>
+        <a href="https://iti.im">ITI.IM yu</a>
       </li>
     </ol>
   </body>
